--- a/style/style.css
+++ b/style/style.css
@@ -88,4 +88,13 @@
 
 .large-button {
   background-color: #3D9970;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-text {
+  font-size: 20px;
+  color: white;
+  align-self: center;
 }
