--- a/style/style.css
+++ b/style/style.css
@@ -171,3 +171,30 @@
   text-align: center;
   border-style: solid;
 }
+
+.game-history {
+  background-color: navy;
+  width: 300px;
+}
+
+.game-history .title {
+  display: flex;
+  justify-content: center;
+  color: white;
+  align-self: center;
+}
+
+.game-history .caption {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: white;
+}
+
+.game-history .row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: white;
+  font-size: 14px;
+}
