--- a/src/App/Component/GameHistory/GameHistoryStyles.less
+++ b/src/App/Component/GameHistory/GameHistoryStyles.less
@@ -13,10 +13,53 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  color: white;
 }
 
 .history-row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  color: white;
+}
+
+.button-row {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  align-items: center;
+  justify-content:space-between;
+  background-color: #003a8c;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.infinite-container {
+  border: 1px solid #e8e8e8;
+  border-radius: 4px;
+  overflow: auto;
+  padding: 8px 24px;
+  height: 300px;
+  width: 450px;
+}
+.loading-container {
+  border-color: red;
+  border-width: 1;
+  position: absolute;
+  bottom: 40px;
+  width: 300px;
+  text-align: center;
+}
+
+.tiny-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-size: 10px;
+  color: white;
 }
